--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <section>
       <h2>Projects</h2>
       <ul>
-        <li><strong>LAMP Auto Deploy</strong><br/>- Automated Apache, MySQL, PHP setup using Ansible and Shell scripts.<br/>- Enabled quick and consistent server provisioning across environments.<br/>- Configured firewall, virtual host, and service validations.</li>
+        <li><strong>LAMP Auto Deploy</strong><br/>- Automated Apache, MySQL, PHP setup using Ansible and Shell scripts.<br/>- Enabled quick and consistent server provisioning across environments.<br/>- Configured firewall, virtual host, and service validations.<br/>- Integrated Docker containerization and deployed app via GitHub Actions CI/CD pipeline.<br/>- Set up custom domain using Route 53 and secured with Let's Encrypt SSL.</li>
         <li><strong>System Resource Monitor</strong><br/>- Developed a lightweight Bash tool for real-time CPU and memory tracking.<br/>- Integrated Slack and email notifications for critical alerts.<br/>- Scheduled via crontab for automated health reporting.</li>
         <li><strong>User Process Tracker</strong><br/>- Monitored and logged user login activities and background processes.<br/>- Improved system compliance and accountability for user actions.<br/>- Produced audit logs and alerts for anomalies.</li>
         <li><strong>AWS DevOps Infra</strong><br/>- Provisioned complete infra using Terraform and deployed apps via CI/CD.<br/>- Leveraged GitHub Actions, Docker, and EC2 autoscaling.<br/>- Implemented centralized logging and security rules.</li>
@@ -146,4 +146,35 @@
       <div class="skill"><div class="skill-name">CI/CD (Jenkins, GitHub Actions)</div><div class="progress-container"><div class="progress" style="width: 80%;"></div></div></div>
       <div class="skill"><div class="skill-name">Terraform & Ansible</div><div class="progress-container"><div class="progress" style="width: 75%;"></div></div></div>
       <div class="skill"><div class="skill-name">Docker & Kubernetes</div><div class="progress-container"><div class="progress" style="width: 70%;"></div></div></div>
-      <div class="skill"><div class="skill-name">Python & Bash</div><div class="progress-container"><div class="progress" style="width: 85%;">
+      <div class="skill"><div class="skill-name">Python & Bash</div><div class="progress-container"><div class="progress" style="width: 85%;"></div></div></div>
+    </section>
+
+    <section>
+      <h2>Work Experience</h2>
+      <p><strong>OnPassive Pvt Ltd</strong> — Associate Cloud Engineer<br/><em>Jul 2023 – Mar 2025</em></p>
+      <ul>
+        <li>Designed automated CI/CD pipelines and monitored deployments with Prometheus and CloudWatch.</li>
+        <li>Worked on infrastructure provisioning using Terraform, Ansible, and AWS services.</li>
+        <li>Streamlined development workflows and improved delivery speed by 40%.</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Certifications</h2>
+      <ul>
+        <li>AWS Certified Solutions Architect – Associate</li>
+        <li>Linux Foundation Certified System Administrator (LFCS)</li>
+        <li>Docker Certified Associate (DCA)</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Interests</h2>
+      <ul>
+        <li>Cloud Automation & Scripting</li>
+        <li>Containerization & DevOps Tooling</li>
+        <li>Monitoring & Observability</li>
+        <li>Open-source Contributions</li>
+        <li>Infrastructure as Code (IaC)</li>
+      </ul>
+    <
