--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   body {
     margin: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: linear-gradient(-45deg, #e1f5fe, #fffde7, #e0f7fa, #f1f8e9);
+    background: linear-gradient(-45deg, #d7f9f3, #fdf6e3, #e0f7fa, #f1f8e9);
     background-size: 400% 400%;
     animation: gradientBG 20s ease infinite;
     color: #263238;
@@ -26,13 +26,13 @@
   .floating {
     position: absolute;
     border-radius: 50%;
-    opacity: 0.15;
-    animation: float 10s ease-in-out infinite;
+    opacity: 0.1;
+    animation: float 12s ease-in-out infinite;
   }
 
-  .circle1 { width: 120px; height: 120px; background: #0288d1; top: 10%; left: 5%; animation-delay: 0s; }
-  .circle2 { width: 80px; height: 80px; background: #ffd600; top: 40%; left: 90%; animation-delay: 4s; }
-  .circle3 { width: 100px; height: 100px; background: #00acc1; top: 75%; left: 3%; animation-delay: 2s; }
+  .circle1 { width: 140px; height: 140px; background: #4fc3f7; top: 10%; left: 5%; animation-delay: 0s; }
+  .circle2 { width: 100px; height: 100px; background: #ffee58; top: 40%; left: 90%; animation-delay: 4s; }
+  .circle3 { width: 120px; height: 120px; background: #4dd0e1; top: 75%; left: 3%; animation-delay: 2s; }
 
   @keyframes float {
     0%, 100% { transform: translateY(0); }
@@ -156,7 +156,11 @@
     </div>
     <section>
       <h2>Career Objective</h2>
-      <p>Aspiring DevOps Engineer skilled in Linux, AWS, automation, and deployment pipelines. Looking to contribute to modern DevOps practices and deliver efficient cloud-native solutions.</p>
+      <p>To leverage my skills in DevOps, cloud infrastructure, and automation to build scalable and efficient systems. I aim to contribute to impactful projects, continuously learn and grow, and help organizations accelerate their delivery cycles using DevOps principles.</p>
+    </section>
+    <section>
+      <h2>Education</h2>
+      <p><strong>B.Tech in Electrical Engineering</strong><br />Jawaharlal Nehru Technological University, Hyderabad — 2021</p>
     </section>
   </div>
 
@@ -166,29 +170,27 @@
       <ul>
         <li><strong>LAMP Auto Deploy</strong>
           <ul>
-            <li>Automated Apache, MySQL, PHP stack with Ansible and shell.</li>
-            <li>Integrated Docker and CI/CD via GitHub Actions.</li>
-            <li>Configured domain and SSL with Route53 & Let's Encrypt.</li>
+            <li>Automated Apache, MySQL, PHP stack using shell and Ansible.</li>
+            <li>Containerized the application and integrated CI/CD pipelines.</li>
+            <li>Deployed using GitHub Actions, with SSL and Route53 configuration.</li>
           </ul>
         </li>
         <li><strong>System Resource Monitor</strong>
           <ul>
-            <li>Bash-based monitor for CPU & memory usage.</li>
-            <li>Alert notifications via Slack and email.</li>
-            <li>Automated reporting with crontab scheduling.</li>
+            <li>Bash script monitoring CPU, memory, and disk usage.</li>
+            <li>Integrated Slack alerts and daily reports using cron jobs.</li>
           </ul>
         </li>
         <li><strong>User Process Tracker</strong>
           <ul>
-            <li>Tracks user logins and background processes.</li>
-            <li>Improves compliance with audit-ready logs.</li>
+            <li>Tracked logged-in users and their background processes.</li>
+            <li>Generated secure logs for audit compliance.</li>
           </ul>
         </li>
-        <li><strong>AWS DevOps Infra</strong>
+        <li><strong>AWS DevOps Infrastructure</strong>
           <ul>
-            <li>Terraform-based infra provisioning.</li>
-            <li>Dockerized app deployment with autoscaling.</li>
-            <li>Logging and monitoring integrated.</li>
+            <li>Provisioned scalable architecture using Terraform and EC2 autoscaling.</li>
+            <li>Implemented CI/CD with GitHub Actions and container deployment.</li>
           </ul>
         </li>
       </ul>
@@ -216,9 +218,10 @@
       <h2>Work Experience</h2>
       <p><strong>OnPassive Pvt Ltd</strong> — Associate Cloud Engineer<br/><em>Jul 2023 – Mar 2025</em></p>
       <ul>
-        <li>Built CI/CD pipelines using Jenkins & GitHub Actions.</li>
-        <li>Provisioned infra with Terraform & Ansible.</li>
-        <li>Boosted deployment efficiency by 40% with automation.</li>
+        <li>Managed cloud infrastructure and DevOps pipelines.</li>
+        <li>Configured Jenkins, GitHub Actions for automated deployment.</li>
+        <li>Used Ansible and Terraform for infrastructure provisioning.</li>
+        <li>Collaborated with cross-functional teams to implement cloud-native solutions.</li>
       </ul>
     </section>
 
